--- a/css/style.css
+++ b/css/style.css
@@ -30,14 +30,23 @@
   margin-top: 30px;
   margin-bottom: 40px;
 }
-/*
-.form-box button{
-  background-color: #8DC854;
-  box-shadow: none !important;
-  color: #fff !important;
+.features li{
+  position: relative;
+  list-style: none;
+  font-size: 20px;
+  padding-left: 20px;
 }
-*/
-
+.features li::before{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  height: 10px;
+  width: 10px;
+  background-color: #8DC854;
+  content: '';
+  border-radius: 50%;
+}
 .footer a{
   color: #414141;
 }
